--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Switch
-version:      2.10
+version:      2.11
 version_from: Switch.pm
-installdirs:  site
+installdirs:  perl
 requires:
     Filter::Util::Call:            0
     Text::Balanced:                0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21_01
+generated_by: ExtUtils::MakeMaker version 6.30_01
