--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Switch
-version:      2.13
-version_from: Switch.pm
-installdirs:  perl
-requires:
+--- #YAML:1.0
+name:                Switch
+version:             2.14
+abstract:            ~
+license:             ~
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Filter::Util::Call:            0
     Text::Balanced:                0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
